--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favico/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favico/favicon-16x16.png">
     <link rel="manifest" href="favico/site.webmanifest">
+    <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-9M63KXQ2PK"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'G-9M63KXQ2PK');
+  </script>
   </head>
   <body onload="stopload()">
     <div class="navbar" id="navbar">
