--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
     <div class="main" id="mainid">
       <div class="main_text">
-        <h1>Profesjonalny druk&nbsp3D klasy premium</h1>
+        <h1>Profesjonalny druk&nbsp3D</h1>
         <h3>Szybkie wykonanie i wysoka jakość produktu.</h3>
       </div>
       <div class="main_arrow_container">
