--- a/materialy.html
+++ b/materialy.html
@@ -121,7 +121,7 @@
       <div class="menu_items" id="menu_items">
           <p><a href="https://druked.pl/">H o m e</a><br></p>
           <p><a href="https://druked.pl/materialy">M a t e r i a ł y</a><br></p>
-          <p><a href="https://druked.pl/zamowienie">Z a m ó w</a><br></p>
+          <p><a href="https://druked.pl/zamow">Z a m ó w</a><br></p>
           <p><a href="https://druked.pl/kontakt">K o n t a k t</a><br></p>
           <p><a href="https://druked.pl/realizacje">R e a l i z a c j e</a><br></p>
           <p><a href="https://druked.pl/sklep">S k l e p</a><br></p>
