--- a/materialy.html
+++ b/materialy.html
@@ -23,72 +23,77 @@
       <img src="media\images\druked-logo.png" class="main_logo" alt="">
       <img src="media\images\menu.png" class="menuicon" id="menuicon" alt="Menu" onclick="togglemenu()">
     </div>
-    <div style="height: 15vh;">
+    <div style="height: 10vh;">
 
     </div>
     <div class="table" id="projects">
       <div class="pakiety">
         <div style="text-align: center;">
-          <h1>Materiały</h1>
-          <h3>Te materiały są dostępne od ręki</h3>
+          <h1 style="font-size: 5vh;">Materiały</h1>
+          <h3 style="font-size: 2vh;">Te materiały są dostępne od ręki</h3>
         </div>
 
 
         <div class="service_wrapper">
-          <div class="concept"  style="background-image: url('https://github.com/Qubi-B/qubi_be_website/blob/main/media/img/plawhite.JPG?raw=true')">
+          <div class="concept"  style="background-image: url(https://druked.pl/media/images/zdj_materialow/image2.jpeg)">
           </div>
           <div class="concept_text">
-            <h2>PLA - Biały</h2>
-            <p class="credits">Devil Design • $$ • Biały • Mat • Do 60°C</p>
-            <p>Zobacz więcej: <a class="qubi" href="https://qbi.net.pl/gallery/plawhite">Galeria</a></p>
+            <h2>PLA Biały</h2>
+            <p class="">Producent: Devil Design 🇵🇱</p>
+            <p class="">Cena: $$</p>
+            <p class="">Wykończenie: Matowy</p>
+            <p class="">Temperatura eksp.: Do 60°C</p>
           </div>
         </div>
         <br>
-
         <div class="service_wrapper">
-          <div class="concept" style="background-image: url('https://github.com/Qubi-B/qubi_be_website/blob/main/media/img/plaalu.JPG?raw=true')">
+          <div class="concept"  style="background-image: url(https://druked.pl/media/images/zdj_materialow/image3.jpeg)">
           </div>
           <div class="concept_text">
-            <h2>PLA - Aluminium</h2>
-            <p class="credits">Devil Design • $$ • Drobny brokat • Do 60°C</p>
-            <p>Zobacz więcej: <a class="qubi" href="https://qbi.net.pl/gallery/plaaluminum">Galeria</a></p>
+            <h2>PLA Aluminium</h2>
+            <p class="">Producent: Devil Design 🇵🇱</p>
+            <p class="">Cena: $$</p>
+            <p class="">Wykończenie: Drobny brokat, lekki połysk</p>
+            <p class="">Temperatura eksp.: Do 60°C</p>
           </div>
         </div>
         <br>
-
         <div class="service_wrapper">
-          <div class="concept" style="background-image: url('https://github.com/Qubi-B/qubi_be_website/blob/main/media/img/plagalacybk.JPG?raw=true')">
+          <div class="concept"  style="background-image: url(https://druked.pl/media/images/zdj_materialow/image0.jpeg)">
           </div>
           <div class="concept_text">
-            <h2>PLA - Gwiezdny czarny</h2>
-            <p class="credits">Devil Design • $$ • Brokat • Do 60°C</p>
-            <p>Zobacz więcej: <a class="qubi" href="https://qbi.net.pl/gallery/plagalaxyblack">Galeria</a></p>
+            <h2>PLA Kosmiczny Czarny</h2>
+            <p class="">Producent: Devil Design 🇵🇱</p>
+            <p class="">Cena: $$</p>
+            <p class="">Wykończenie: Galaxy Black, brokat</p>
+            <p class="">Temperatura eksp.: Do 60°C</p>
           </div>
         </div>
         <br>
-
         <div class="service_wrapper">
-          <div class="concept" style="background-image: url('https://github.com/Qubi-B/qubi_be_website/blob/main/media/img/plagalacybk.JPG?raw=true')">
+          <div class="concept"  style="background-image: url(https://druked.pl/media/images/zdj_materialow/image1.jpeg)">
           </div>
           <div class="concept_text">
-            <h2>PETG - Czarny</h2>
-            <p class="credits">Devil Design • $$ • Połysk • Do 85°C</p>
-            <p>Zobacz więcej: <a class="qubi" href="https://qbi.net.pl/gallery/plagalaxyblack">Galeria</a></p>
+            <h2>PETG Czarny</h2>
+            <p class="">Producent: Devil Design 🇵🇱</p>
+            <p class="">Cena: $$</p>
+            <p class="">Wykończenie: Połysk</p>
+            <p class="">Temperatura eksp.: Do 85°C</p>
           </div>
         </div>
         <br>
-
         <div class="service_wrapper">
-          <div class="concept"  style="background-image: url('https://github.com/Qubi-B/qubi_be_website/blob/main/media/img/platranslucent.JPG?raw=true')">
+          <div class="concept"  style="background-image: url(https://druked.pl/media/images/zdj_materialow/image4.jpeg)">
           </div>
           <div class="concept_text">
-            <h2>PETG - Bezbarwny</h2>
-            <p class="credits">Fiberlogy • $$$ • Rozpraszający światło • Do 85°C</p>
-            <p>Zobacz więcej: <a class="qubi" href="https://qbi.net.pl/gallery/petgtranslucent">Galeria</a></p>
+            <h2>PETG Prześwitujący</h2>
+            <p class="">Producent: Fiberlogy 🇵🇱</p>
+            <p class="">Cena: $$$</p>
+            <p class="">Wykończenie: Rozpraszający światło</p>
+            <p class="">Temperatura eksp.: Do 85°C</p>
           </div>
         </div>
         <br>
-
       </div>
     </div>
     <div class="footer">
