--- a/zamow.html
+++ b/zamow.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Zamów - Druked</title>
+    <meta name="theme-color" content="#000000">
     <link rel="stylesheet" href="css/master.css">
     <link rel="stylesheet" href="css/info.css">
     <link rel="stylesheet" href="css/zast.css">
