--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <p>
           <u><i><a class="qubi" href="https://druked.pl/">Home</a></i></u>
           &nbsp&nbsp<u><i><a class="qubi" href="https://druked.pl/materialy">Materiały</a></i></u>
-          &nbsp&nbsp<u><i><a class="qubi" href="https://druked.pl/zamowienie">Zamów</a></u></i></u>
+          &nbsp&nbsp<u><i><a class="qubi" href="https://druked.pl/zamow">Zamów</a></u></i></u>
           &nbsp&nbsp<u><i><a class="qubi" href="https://druked.pl/kontakt">Kontakt</a></u></i></u>
           &nbsp&nbsp<u><i><a class="qubi" href="https://druked.pl/realizacje">Realizacje</a></u></i></u>
           &nbsp&nbsp<u><i><a class="qubi" href="https://druked.pl/sklep">Sklep</a></i></u>
