--- a/index.html
+++ b/index.html
@@ -148,8 +148,9 @@
           &nbsp&nbsp<u><i><a class="qubi" href="https://druked.pl/sklep">Sklep</a></i></u>
         </p>
         <h3>Kontakt</h3>
-        <p>@: druk@druked.pl</p>
-        <p>M: +48 530 535 555</p>
+        <p>WWW: druked.pl</p>
+        <p>Zamówienia: druk@druked.pl</p>
+        <p>Informacja: info@druked.pl</p>
         <table>
           <tr>
             <td class="tde"><a href="https://www.facebook.com/3druked"><img src="media/img/facebook-app-symbol.png" class="social_icon" alt="FB"></a></td>
