--- a/zamow.html
+++ b/zamow.html
@@ -47,7 +47,7 @@
     <div class="footer">
       <div class="footer_content">
         <img src="media\images\druked-logo.png" class="foot_logo" alt="">
-        <p>Drukujemy w 3D twoje pomysły, projekty, prototypy, obudowy, figurki, koła zębate, zawieszki do kluczy i wiele innych. Jakość premium i szybka obsługa zamówień. Dowiedz się więcej na stronie. Aby zamówić wydrkuk, skontaktuj się lub zamów coś w sklepie internetowym.</p>
+        <p>Drukujemy w 3D twoje pomysły, projekty, prototypy, obudowy, figurki, koła zębate, zawieszki do kluczy i wiele innych. Jakość premium i szybka obsługa zamówień. Dowiedz się więcej na stronie. Aby zamówić wydruk, skontaktuj się lub zamów coś w sklepie internetowym.</p>
         <p>
           <u><i><a class="qubi" href="https://druked.pl/">Home</a></i></u>
           &nbsp&nbsp<u><i><a class="qubi" href="https://druked.pl/materialy">Materiały</a></i></u>
@@ -57,12 +57,13 @@
           &nbsp&nbsp<u><i><a class="qubi" href="https://druked.pl/sklep">Sklep</a></i></u>
         </p>
         <h3>Kontakt</h3>
-        <p>@: druk@druked.pl</p>
-        <p>M: +48 530 535 555</p>
+        <p>WWW: druked.pl</p>
+        <p>Zamówienia: druk@druked.pl</p>
+        <p>Informacja: info@druked.pl</p>
         <table>
           <tr>
-            <td class="tde"><a href="https://www.facebook.com/"><img src="media/img/facebook-app-symbol.png" class="social_icon" alt="FB"></a></td>
-            <td class="tde"><a href="https://www.instagram.com/"><img src="media/img/instagram.png" class="social_icon" alt="IG"></a></td>
+            <td class="tde"><a href="https://www.facebook.com/3druked"><img src="media/img/facebook-app-symbol.png" class="social_icon" alt="FB"></a></td>
+            <td class="tde"><a href="https://www.instagram.com/druked_pl"><img src="media/img/instagram.png" class="social_icon" alt="IG"></a></td>
           </tr>
         </table>
         <br>
