--- a/barszcz.cz/index.html
+++ b/barszcz.cz/index.html
@@ -29,7 +29,7 @@
     <body>
         <div class="center">
             <div class="logo">
-                <img src="img\barszcz_centered.png" alt="">
+                <img src="https://github.com/Qubi-B/druked_pl/blob/main/barszcz.cz/img/Barszcz_centered.png?raw=true" alt="">
             </div>
         </div>
         <div class="menu">
@@ -50,8 +50,8 @@
             <p style="font-size: 10px">
                 &nbsp;
             </p>
-            <h3 id="date">Sobota, 08.04.2023</h3>
-            <h2 id="hour">23:22</h3>
+            <h3 id="date">dtyg, dd.mm.yyyyr.</h3>
+            <h2 id="hour">-- : --</h3>
         </div>
 
         <script src="clk.js"></script>
