--- a/barszcz.cz/index.html
+++ b/barszcz.cz/index.html
@@ -2,7 +2,7 @@
 <html lang="pl" dir="ltr" id="html">
     <head>
         <title>Barszcz</title>
-        <meta name="description" content="Witaj w serwisie domeny barszcz.cz.">
+        <meta name="description" content="Witaj w serwisie domeny barszcz.cz">
         <meta name="theme-color" content="#000000">
         <meta charset="utf-8">
 
