--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="main" id="mainid">
       <div class="main_text">
         <h1>Profesjonalny druk&nbsp3D</h1>
-        <h3>Szybkie wykonanie i wysoka jakość produktu.</h3>
+        <h3>Wytwarzanie i reprodukcja niedostępnych części do samochodów. Wysoka jakość gwarantowana.</h3>
       </div>
       <div class="main_arrow_container">
         <div class="main_arrow">
@@ -55,16 +55,14 @@
         <div class="service_wrapper" style="background-color: transparent;">
           <div class="">
             <h2>Możliwości</h2>
-            <p>Druked specjalizuje się w produkcji niewielkich partii części z tworzywa sztucznego. Mimo, że tworzymy głównie zarówno wewnętrzne i zewnętrzne części zamienne do pojazdów, z chęcią zrealizujemy zamówienia na części takie, jak: </p>
+            <p>Druked specjalizuje się w wytwarzaniu:</p>
             <ul>
-              <li><p>Plastikowe części do samochodów, urządzeń, narzędzi;</p></li>
-              <li><p>Replikacja niedostępnych/wycofanych z produkcji elementów i produktów;</p></li>
-              <li><p>Części dekoracyjne i mechaniczne do projektów hobbystycznych, prac magisterskich;</p></li>
-              <li><p>Dekoracje wnętrz, personalizowane prezenty, gadżety i akcesoria;</p></li>
-              <li><p>Figurki, zabawki, cosplay;</p></li>
-              <li><p>Wiele, wiele innych - jedynym ograniczeniem jest wyobraźnia.</p></li>
+              <li><p>Niedostępnych części do:</p></li>
+              <li><p>  samochodów i samochodów zabytkowych;</p></li>
+              <li><p>  motocykli i motocylki zabytkowych;</p></li>
+              <li><p>  innych pojazdów i maszyn;</p></li>
             </ul>
-            <p class="credits">Foto: <a class="qubi" href="https://www.printables.com/pl/model/237722-raspberry-pi-pico-rtc-display-case">Dmytro Panin</a></p>
+            <p class="credits">Foto: <a class="qubi" href="https://unsplash.com/photos/black-and-green-car-interior--5NQhyJ_Ldk">Pedro Spina</a></p>
           </div>
           <div class="zast_img">
 
