--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </head>
   <body onload="stopload()">
     <div class="navbar" id="navbar">
-      <img src="media\images\druked_thin.png" class="main_logo" alt="">
+      <img src="media\images\druked-logo.png" class="main_logo" alt="">
       <img src="media\images\menu.png" class="menuicon" id="menuicon" alt="Menu" onclick="togglemenu()">
     </div>
     <div class="main" id="mainid">
